clang/test/BSC/Negative/Ownership/Owned/ownership_template_arr/ownership_template_arr.cbs
// RUN: %clang_cc1 -verify %s
T func<T>(T t) {
    T array[1] = {t};   // expected-error {{'int *_Owned[1]' cannot be qualified by '_Owned'}}
    return array[0];
}
int *_Owned safe_malloc(int);
void safe_free(void * _Owned);

void test() {
    int a = 0;
    int *_Owned p1 = safe_malloc(a);

    int *_Owned p2 = func(p1);   // expected-note {{in instantiation of function template specialization 'func<int *_Owned>' requested here}}
    safe_free((void *_Owned)p2);
}
void test2(){
    int *_Owned arr[1];  // expected-error {{type of array cannot be qualified by '_Owned'}}
}
T func2<T>(T t) {
  T array2d[1][1] = {{t}};       // expected-error {{type of 'int *_Owned[1][1]' cannot be qualified by '_Owned'}}
  return array2d[0][0];
}
void test3(){
    int a = 0;
    int *_Owned p1 = safe_malloc(a);

    int *_Owned p3 = func2(p1);  // expected-note {{in instantiation of function template specialization 'func2<int *_Owned>' requested here}}
    safe_free((void *_Owned)p3);
}
int main() {
    test();
}